--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,10 +1,60 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>The Reel Cafe</title>
+    <link rel="stylesheet" href="css/framework.css">
+    <link rel="stylesheet" href="css/social-core.css">
+    <link rel="icon" type="image/png" href="recursos/icons/et.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="recursos/icons/et.png" sizes="192x192">
+    <link rel="shortcut icon" href="recursos/icons/et.png">
 </head>
 <body>
-	Hola este es mi proyecto
+    <header class="d-flex justify-content-between align-items-center bg-header-footer padding-header-admin">
+        <div class="d-flex align-items-center">
+            <img class="logo-img-header" src="recursos/imgs/logo.png" alt="Logo The Reel Cafe">
+            <h1 class="text_header">The Reel <br> Café</h1>
+        </div>
+
+        <div class="d-flex gap">
+            <UL class="d-flex list-none-style gap">
+                <LI><img class="user-icon rounded-md" src="recursos/icons/user-default.png" alt="User Icon"></LI>
+                <LI><a href="paginas/user_profile.html" class="btn-usuario">USUARIO</a></LI>
+                <LI><a href="paginas/index.html" class="btn-cerrar-sesion">CERRAR SESION</a></LI>
+            </UL>
+        </div>
+
+
+    </header>
+
+    <section class="d-flex gap">
+        <article class="admin">
+            <div class="admin-section">
+                <h1 class="text-h1">Panel de control</h1>
+                <p class="text-parrafo">Administra la plataforma, gestiona usuarios y publica nuevas películas.</p>
+            </div>
+                <img class="admin-star" src="recursos/imgs/starwars.png"></img>
+        </article>
+
+        <article class="admin">
+            <div class="btns-admin">
+                <a href="vistas/AdministrarCuentas.jsp" class="btn-g-usuario">Gestionar usuarios</a>
+                <a href="vistas/AdministrarPeliculas.jsp" class="btn-g-pelicula">Gestionar películas</a>
+            </div>
+        </article>
+    </section>
+
+
+    <footer id="footer" class="d-flex justify-content-between bg-header-footer">
+        <div class="d-flex align-items-center margin">
+            <img class="logo-img-footer" src="recursos/imgs/logo.png" alt="Logo The Reel Cafe">
+            <h2 class="text-footer-logo">The Reel <br> Café</h2>
+        </div>
+
+        <div>
+            <p class="text-footer">2025B -Aplicaciones Web - Grupo 2</p>
+        </div>
+    </footer>
 </body>
 </html>
