--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -40,7 +40,7 @@
         <article class="admin">
             <div class="btns-admin">
                 <a href="vistas/AdministrarCuentas.jsp" class="btn-g-usuario">Gestionar usuarios</a>
-                <a href="vistas/AdministrarPeliculas.jsp" class="btn-g-pelicula">Gestionar películas</a>
+                <a href="GestionarPeliculas?action=listar" class="btn-g-pelicula">Gestionar películas</a>
             </div>
         </article>
     </section>
