--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -39,7 +39,7 @@
 
         <article class="admin">
             <div class="btns-admin">
-                <a href="vistas/AdministrarCuentas.jsp" class="btn-g-usuario">Gestionar usuarios</a>
+                <a href="GestionarCuentasController?action=listar" class="btn-g-usuario">Gestionar usuarios</a>
                 <a href="GestionarPeliculas?action=listar" class="btn-g-pelicula">Gestionar películas</a>
             </div>
         </article>
